examples/test/conf/TLSRoute/StreamPlugins/02_EdgionStreamPlugins_allow_localhost.yaml
# EdgionStreamPlugins: allow only localhost
# Tests that stream plugin correctly allows 127.0.0.0/8
apiVersion: edgion.io/v1
kind: EdgionStreamPlugins
metadata:
  name: tls-allow-localhost
  namespace: edgion-test
spec:
  plugins:
    - type: IpRestriction
      config:
        defaultAction: deny
        allow:
          - "127.0.0.0/8"
