examples/test/conf/TLSRoute/StreamPlugins/Service_test-tcp.yaml
# Backend service for TLSRoute StreamPlugins testing
apiVersion: v1
kind: Service
metadata:
  name: test-tcp
  namespace: edgion-test
spec:
  ports:
    - port: 30010
      targetPort: 30010
      protocol: TCP
